# check_me_claude

./: .env.example  .gitignore  .test-commit  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
datasets/: WORKFLOW.md  registry.json
datasets/contiki-ng-CVE-2021-21281/: metadata.json  notes.md
datasets/contiki-ng-CVE-2021-21281/gold/: attack_scenarios.json  entrypoints.json  evidence_irs.json  substrate.json
datasets/dnsmasq-CVE-2017-14491/: metadata.json  notes.md
datasets/dnsmasq-CVE-2017-14491/gold/: attack_scenarios.json  entrypoints.json  evidence_irs.json  substrate.json
datasets/dnsmasq-CVE-2020-25681/: metadata.json
datasets/dnsmasq-CVE-2020-25681/gold/: attack_scenarios.json  entrypoints.json  evidence_irs.json  substrate.json
datasets/dropbear-CVE-2021-36369/: metadata.json
datasets/libssh-CVE-2018-10933/: metadata.json  notes.md
datasets/lwip-CVE-2020-22283/: metadata.json  notes.md
datasets/mbedtls-CVE-2018-0488/: metadata.json  notes.md
datasets/nginx-CVE-2025-23419/: metadata.json  notes.md
datasets/sudo-CVE-2021-3156/: metadata.json  notes.md
datasets/u-boot-CVE-2018-3968/: metadata.json  notes.md
docs/: LLM_CONFIG.md  PHASE1_SCHEMA_GAP_STATE_CORRUPTION.md
rules/: c_cpp_registry.yaml
schemas/: README.md  attack_scenarios.v1.json  entrypoints.v1.json  evidence_irs.v1.json  substrate.v1.json
src/check_me/: __init__.py  __main__.py  audit_log.py  cli.py  config.py
src/check_me/cli_commands/: cmd_index.py  (+7 more)
tests/: conftest.py  test_audit_log.py  test_code_mode.py  test_e2e_cli.py  test_eval_runner.py  test_eval_step1.py  test_eval_step2.py  test_eval_step3_step4.py  test_indexer.py  test_interpret.py  test_llm_client.py  test_llm_config.py  test_llm_json_call.py  test_llm_smoke.py  test_primitives.py  test_profiles.py  test_scenario_mode.py  test_spec_check.py  test_stats.py  test_step1_call_graph.py  test_step1_callback_registrations.py  test_step1_config_triggers.py  test_step1_data_control_flow.py  test_step1_dispatch_resolution.py  test_step1_evidence_anchors.py  test_step1_guards.py  test_step1_regex_baseline.py  test_step1_trust_boundaries.py  test_step2_miner_chunked.py  test_step2_prompts.py  test_step2_runner.py  test_step2_smoke.py  test_step2_substrate_slice.py  test_step3_code_excerpt.py  test_step3_retrieval.py  test_step3_runner.py  test_step4_runner.py  test_validator.py
(+80 files in other folders)
