[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check_me"
version = "0.0.1"
description = "Check Me — 4-step security analysis framework: deterministic substrate + LLM reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "clang==18.1.8",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
check-me = "check_me.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
