[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check_me"
version = "0.0.1"
description = "Check Me — 4-step security analysis framework: deterministic substrate + LLM reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Pinned to clang 18 because the libclang ABI is not version-stable;
  # the bundled bindings must match the libclang.so on the host. We
  # accept any 18.x patch release. CHECK_ME_LIBCLANG env var overrides
  # the host library path for non-default installs.
  "clang>=18,<19",
  "jsonschema>=4.0",
  # LLM client wire format. Any OpenAI-compat provider (Gemini, Qwen via
  # OpenRouter, Anthropic shim, vLLM, …) speaks this SDK.
  "openai>=1.40,<2",
  # Loads .env files in dev. In prod the env vars come from the
  # deployment system and python-dotenv stays out of the way.
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
check-me = "check_me.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
